refactor: update favicon href path

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/src/favicon.jpg" />
+    <link rel="icon" type="image/jpg" href="/src/assets/favicon.jpg" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat"
       rel="stylesheet"
